Refactor: 태그 할당 책임을 전담 서비스로 이동